cdk8s/dist/stage-1-tripbot-youtube.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: tripbot-youtube
    app.kubernetes.io/part-of: tripbot
  name: tripbot-youtube
  namespace: stage-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripbot-youtube
  template:
    metadata:
      annotations:
        adanalife.dev/config-hash: 9e0a82067e
      labels:
        app: tripbot-youtube
    spec:
      containers:
        - env:
            - name: USER
              value: tripbot
          image: adanalife/tripbot:develop
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          name: tripbot-youtube
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: tripbot-youtube
    app.kubernetes.io/part-of: tripbot
  name: tripbot-youtube
  namespace: stage-1
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: tripbot-youtube
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-route53
    external-dns.alpha.kubernetes.io/hostname: tripbot-youtube.stage.whereisdana.today
  labels:
    app.kubernetes.io/name: tripbot-youtube
    app.kubernetes.io/part-of: tripbot
  name: tripbot-youtube
  namespace: stage-1
spec:
  ingressClassName: traefik
  rules:
    - host: tripbot-youtube.stage.whereisdana.today
      http:
        paths:
          - backend:
              service:
                name: tripbot-youtube
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - tripbot-youtube.stage.whereisdana.today
      secretName: tripbot-youtube-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripbot-youtube-ts
  namespace: stage-1
spec:
  defaultBackend:
    service:
      name: tripbot-youtube
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - tripbot-youtube-stage
